# sn79

./: .gitignore  FAQ.md  README.md  min_compute.yml  requirements.txt  run_miner.sh  run_validator.sh
GenTRX/src/: dataloader.py  distributed.py  gradient.py  gradient_server.py  gradient_store.py  miner_training_server.py  miner_training_service.py  model.py  state_packager.py  tokenizer.py  train.py  version.py
GenTRX/src/util/: gen_config.py  schema.py
GenTRX/tests/: test_event_chunking.py  test_scale_binding.py  test_soft_ce_regime.py  test_state_packager.py
agents/: README.md
agents/proxy/: config.json  proxy.py
doc/gentrx/: data_flow.md  miner_setup.md  training_params.md
simulate/trading/: CMakeLists.txt
simulate/trading/cmake/: CollectTestSources.cmake
simulate/trading/src/cpp/base/: CMakeLists.txt  IMessageable.hpp
simulate/trading/src/cpp/book/: Book.cpp  BookProcessLogger.cpp  BookProcessManager.cpp  CMakeLists.txt  FeeLogger.cpp  L2Logger.cpp  L3EventLogger.cpp  TickContainer.cpp  UpdateCounter.cpp
simulate/trading/src/cpp/book/include/taosim/book/: Book.hpp  BookProcessLogger.hpp  BookProcessManager.hpp  BookSignals.hpp  FeeLogger.hpp  L2Logger.hpp  L3EventLogger.hpp  OrderContainer.hpp  TickContainer.hpp  UpdateCounter.hpp
simulate/trading/src/cpp/book/include/taosim/book/serialization/: OrderContainer.hpp  TickContainer.hpp  UpdateCounter.hpp
simulate/trading/src/cpp/checkpoint/: CMakeLists.txt  CheckpointManager.cpp  helpers.cpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/: CheckpointError.hpp  CheckpointManager.hpp  CheckpointToken.hpp  SimulatorState.hpp  helpers.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/: SimulatorState.hpp  helpers.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/accounting/: Account.hpp  AccountRegistry.hpp  Balances.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/agent/: ALGOTraderAgent.hpp  FuturesTraderAgent.hpp  HighFrequencyTraderAgent.hpp  NoiseTraderAgent.hpp  RandomTraderAgent.hpp  StylizedTraderAgent.hpp  common.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/book/: Book.hpp  BookProcessManager.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/exchange/: ClearingManager.hpp  DynamicFeePolicy.hpp  ExchangeSignals.hpp  FeePolicyWrapper.hpp  TieredFeePolicy.hpp  helpers.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/process/: FundamentalPrice.hpp  FuturesSignal.hpp  GBM.hpp  JumpDiffusion.hpp  MagneticField.hpp  RNG.hpp
simulate/trading/src/cpp/exchange/: CMakeLists.txt  ClearingManager.cpp  DynamicFeePolicy.cpp  Exchange.cpp  ExchangeConfig.cpp  ExchangeSignals.cpp  FeePolicyWrapper.cpp  OrderPlacementValidator.cpp  ReplayEventLogger.cpp  TieredFeePolicy.cpp
simulate/trading/src/cpp/exchange/include/taosim/exchange/: ClearingManager.hpp  DynamicFeePolicy.hpp  Exchange.hpp  FeePolicy.hpp  FeePolicyWrapper.hpp  Fees.hpp  OrderPlacementValidator.hpp  ReplayEventLogger.hpp  TieredFeePolicy.hpp
simulate/trading/src/cpp/message/: CMakeLists.txt  ExchangeAgentMessagePayloads.cpp  Message.cpp  MessagePayload.cpp  MessageQueue.cpp  MultiBookMessagePayloads.cpp  PayloadFactory.cpp
simulate/trading/src/cpp/message/include/taosim/message/: ExchangeAgentMessagePayloads.hpp  Message.hpp  MessagePayload.hpp  MessageQueue.hpp  MultiBookMessagePayloads.hpp  PayloadFactory.hpp
simulate/trading/src/cpp/message/include/taosim/message/serialization/: DistributedAgentResponsePayload.hpp  EmptyPayload.hpp  Message.hpp  MessageQueue.hpp  helpers.hpp
simulate/trading/src/cpp/net/: CMakeLists.txt
simulate/trading/src/cpp/process/: CMakeLists.txt  FundamentalPrice.cpp  FundamentalPrice.hpp  FuturesSignal.cpp  GBM.cpp  JumpDiffusion.cpp  MagneticField.cpp  MagneticFieldLogger.cpp  ProcessFactory.cpp  RNG.cpp
simulate/trading/src/cpp/process/include/taosim/process/: FundamentalPrice.hpp  FuturesSignal.hpp  GBM.hpp  JumpDiffusion.hpp  MagneticField.hpp  MagneticFieldLogger.hpp  Process.hpp  ProcessFactory.hpp  RNG.hpp
simulate/trading/src/cpp/replay/: CMakeLists.txt  ReplayManager.cpp  helpers.cpp
simulate/trading/src/cpp/replay/include/taosim/replay/: ReplayManager.hpp  helpers.hpp
simulate/trading/src/cpp/serialization/: CMakeLists.txt  JsonSerializable.hpp  json_util.cpp  json_util.hpp
simulate/trading/src/cpp/serialization/include/taosim/serialization/: L3Serializable.hpp
simulate/trading/src/cpp/serialization/include/taosim/serialization/msgpack/: common.hpp  utils.hpp
simulate/trading/src/cpp/serialization/include/taosim/serialization/msgpack/Eigen/: MatrixXd.hpp  VectorXd.hpp
simulate/trading/src/cpp/serialization/include/taosim/serialization/msgpack/boost/: bimap.hpp  circular_buffer.hpp
simulate/trading/src/cpp/util/: CMakeLists.txt  Cancellation.hpp  ClosePosition.cpp  ClosePosition.hpp  FeeLogEvent.hpp  Flags.hpp  InstructionLogger.cpp  InstructionLogger.hpp  Order.cpp  Order.hpp  Trade.cpp  Trade.hpp  common.hpp  util.cpp
simulate/trading/src/cpp/util/include/taosim/util/: SubscriptionRegistry.hpp
simulate/trading/src/cpp/util/include/taosim/util/serialization/: SubscriptionRegistry.hpp
simulate/trading/test/cpp-tests/serialization/msgpack/: CMakeLists.txt
simulate/trading/test/cpp-tests/serialization/msgpack/Eigen/: MatrixXdTests.cpp  VectorXdTests.cpp
simulate/trading/test/cpp-tests/serialization/msgpack/boost/: CircularBufferTests.cpp
simulate/trading/test/cpp-tests/serialization/msgpack/include/taosim_tests/serialization/msgpack/: common.hpp
taos/: __init__.py
taos/agent/: Agent_C.py  Agent_O.py  MinerAgent.py  MinerAgent1.py  OCO.py  RealizedAgent.py
taos/common/agents/: __init__.py
taos/common/config/: __init__.py
taos/common/neurons/: validator.py
taos/common/utils/: prometheus.py
taos/im/agents/: __init__.py  gentrx.py
taos/im/config/: __init__.py  benchmark_agents.json
taos/im/neurons/: benchmark.py  miner.py  validator.py
(+123 files in other folders)
